@@ -279,19 +279,22 @@ bool OIIO_API paste (ImageBuf &dst, int xbegin, int ybegin,
                      int nthreads = 0);
 
 
-/// Copy a subregion of src to the corresponding pixels of dst,
-/// but with the scanlines exchanged vertically.
+/// Copy src to dst, but with the scanlines exchanged vertically within
+/// the display/full window. In other words,
+///     AB  -->   CD
+///     CD        AB
 ///
-/// Only the pixels (and channels) in dst that are specified by roi will
-/// be altered; the default roi is to alter all the pixels in dst.
-/// If dst is uninitialized, it will be resized to be a float ImageBuf
-/// large enough to hold the region specified by roi.  It is an error
-/// to pass both an uninitialied dst and an undefined roi.
+/// Only the pixels (and channels) in src that are specified by roi will be
+/// copied to their corresponding positions in dst; the default roi is to
+/// copy the whole data region of src. If dst is uninitialized, it will be
+/// resized to be a float ImageBuf large enough to hold the region specified
+/// by roi. It is an error to pass both an uninitialied dst and an undefined
+/// roi.
 ///
-/// The nthreads parameter specifies how many threads (potentially) may
-/// be used, but it's not a guarantee.  If nthreads == 0, it will use
-/// the global OIIO attribute "nthreads".  If nthreads == 1, it
-/// guarantees that it will not launch any new threads.
+/// The nthreads parameter specifies how many threads (potentially) may be
+/// used, but it's not a guarantee.  If nthreads == 0, it will use the
+/// global OIIO attribute "nthreads".  If nthreads == 1, it guarantees that
+/// it will not launch any new threads.
 ///
 /// Works on all pixel data types.
 ///
@@ -300,19 +303,22 @@ bool OIIO_API paste (ImageBuf &dst, int xbegin, int ybegin,
 bool OIIO_API flip (ImageBuf &dst, const ImageBuf &src,
                     ROI roi=ROI::All(), int nthreads=0);
 
-/// Copy a subregion of src to the corresponding pixels of dst,
-/// but with the columns exchanged horizontally.
+/// Copy src to dst, but with the columns exchanged horizontally within
+/// the display/full window. In other words,
+///     AB  -->  BA
+///     CD       DC
 ///
-/// Only the pixels (and channels) in dst that are specified by roi will
-/// be altered; the default roi is to alter all the pixels in dst.
-/// If dst is uninitialized, it will be resized to be a float ImageBuf
-/// large enough to hold the region specified by roi.  It is an error
-/// to pass both an uninitialied dst and an undefined roi.
+/// Only the pixels (and channels) in src that are specified by roi will be
+/// copied to their corresponding positions in dst; the default roi is to
+/// copy the whole data region of src. If dst is uninitialized, it will be
+/// resized to be a float ImageBuf large enough to hold the region specified
+/// by roi. It is an error to pass both an uninitialied dst and an undefined
+/// roi.
 ///
-/// The nthreads parameter specifies how many threads (potentially) may
-/// be used, but it's not a guarantee.  If nthreads == 0, it will use
-/// the global OIIO attribute "nthreads".  If nthreads == 1, it
-/// guarantees that it will not launch any new threads.
+/// The nthreads parameter specifies how many threads (potentially) may be
+/// used, but it's not a guarantee.  If nthreads == 0, it will use the
+/// global OIIO attribute "nthreads".  If nthreads == 1, it guarantees that
+/// it will not launch any new threads.
 ///
 /// Works on all pixel data types.
 ///
@@ -321,20 +327,23 @@ bool OIIO_API flip (ImageBuf &dst, const ImageBuf &src,
 bool OIIO_API flop (ImageBuf &dst, const ImageBuf &src,
                     ROI roi=ROI::All(), int nthreads=0);
 
-/// Copy a subregion of src to the corresponding pixels of dst, but with
-/// both the rows exchanged vertically and the columns exchanged
-/// horizontally (this is equivalent to a 180 degree rotation).
+/// Copy src to dst, but with both the rows exchanged vertically and the
+/// columns exchanged horizontally (this is equivalent to a 180 degree
+/// rotation of the display window). In other words,
+///     AB  -->  DC
+///     CD       BA
 ///
-/// Only the pixels (and channels) in dst that are specified by roi will
-/// be altered; the default roi is to alter all the pixels in dst.
-/// If dst is uninitialized, it will be resized to be a float ImageBuf
-/// large enough to hold the region specified by roi.  It is an error
-/// to pass both an uninitialied dst and an undefined roi.
+/// Only the pixels (and channels) in src that are specified by roi will be
+/// copied to their corresponding positions in dst; the default roi is to
+/// copy the whole data region of src. If dst is uninitialized, it will be
+/// resized to be a float ImageBuf large enough to hold the region specified
+/// by roi. It is an error to pass both an uninitialied dst and an undefined
+/// roi.
 ///
-/// The nthreads parameter specifies how many threads (potentially) may
-/// be used, but it's not a guarantee.  If nthreads == 0, it will use
-/// the global OIIO attribute "nthreads".  If nthreads == 1, it
-/// guarantees that it will not launch any new threads.
+/// The nthreads parameter specifies how many threads (potentially) may be
+/// used, but it's not a guarantee.  If nthreads == 0, it will use the
+/// global OIIO attribute "nthreads".  If nthreads == 1, it guarantees that
+/// it will not launch any new threads.
 ///
 /// Works on all pixel data types.
 ///
@@ -346,6 +355,8 @@ bool OIIO_API flipflop (ImageBuf &dst, const ImageBuf &src,
 /// Copy a subregion of src to the corresponding transposed (x<->y)
 /// pixels of dst.  In other words, for all (x,y) within the ROI, set
 /// dst[y,x] = src[x,y].
+///     AB  -->  AC
+///     CD       BD
 ///
 /// Only the pixels (and channels) of src that are specified by roi will
 /// be copied to dst; the default roi is to alter all the pixels in dst.
