@@ -10,6 +10,11 @@ Public API changes:
   (1.5.0/1.4.9) (#874)
 
 Fixes, minor enhancements, and performance improvements:
+* ImageBufAlgo:
+   * flip(), flop(), flipflop() have been rewritten to work more
+     sensibly for cropped images. In particular, the transformation now
+     happens with respect to the display (full) window, rather than
+     simply flipping or flopping within the data window. (1.5.2)
 * oiiotool:
    * oiiotool --nosoftwareattrib suppresses the altering of Software and
      ImageHistory fields upon output. (1.5.1)
@@ -29,6 +34,8 @@ Fixes, minor enhancements, and performance improvements:
      ImageHistory metadata (makes it less pointlessly verbose). (1.5.1)
    * Now get helpful error messages if input images are corrupt or
      incomplete. (1.5.1)
+   * oiiotool --flip, --flop, --flipflop, and --transpose now have more
+     sensible behavior for cropped images. (1.5.2)
 * maketx:
    * Fix case typo for LatLong env map creation when in 'prman' mode. #877.
      (1.5.1/1.4.10)
